CLC-2628 - Spinner issues on Firefox & Safari https://jira.media.berkeley.edu/jira/browse/CLC-2628

--- a/app/assets/stylesheets/_course_provision.scss
+++ b/app/assets/stylesheets/_course_provision.scss
@@ -4,8 +4,8 @@
   .cc-page-provision-actas-form {
     background: $cc-color-white;
     input[type="text"] {
-      margin-right: 10px;
-      padding: 13px 5px 12px;
+      margin: 2px 10px 0 0;
+      padding: 0 2px;
       width: 140px;
     }
   }
